--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,16 @@
         app:layout_constraintStart_toEndOf="@id/btn_first"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="Back"
+        android:backgroundTint="@color/teal_200"
+        app:layout_constraintStart_toEndOf="@id/btn_second"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
